--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -35,7 +35,7 @@ jobs:
 
           ## Current Resume
 
-          ![Resume](resume.png)
+          ![Resume](resume.pdf)
 
           ## How to Use
 
