Enhance update-readme workflow with permissions and safety
Added permissions for write access and updated GitHub Action user details. Changed push command to use force-with-lease for safety.

--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -9,6 +9,8 @@ on:
 jobs:
   update-readme:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
       - uses: actions/checkout@v3
         with:
@@ -24,7 +26,6 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y poppler-utils imagemagick ghostscript
           sudo sed -i 's/rights="none" pattern="PDF"/rights="read|write" pattern="PDF"/' /etc/ImageMagick-6/policy.xml
-          # Added background white color to the PNG conversion
           convert -density 300 resume.pdf -background white -alpha remove -alpha off -quality 100 resume.png
           
       - name: Update README
@@ -49,8 +50,15 @@ jobs:
           
       - name: Commit and push
         run: |
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
+          git config --local user.email "github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
+          
+          # Pull the latest changes with rebase to avoid merge commits
+          git pull --rebase
+          
+          # Add the changes and commit
           git add README.md resume.pdf resume.png
           git commit -m "Update README with latest resume" || echo "No changes to commit"
-          git push
+          
+          # Push with force-with-lease for safety
+          git push --force-with-lease
