Add last updated timestamp to README

--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -1,3 +1,4 @@
+
 name: Update Resume in README
 
 on:
@@ -38,7 +39,7 @@ jobs:
           1. Clone this repository
           2. Edit `resume.tex` file
           3. Compile with LaTeX or use Overleaf
-          
+          *Last updated: $(date '+%Y-%m-%d %H:%M:%S')*
           EOL
           
       - name: Commit and push
