Change resume link from PDF to PNG
Updated README to reference resume.png instead of resume.pdf.

--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -34,12 +34,11 @@ jobs:
           # Venu Dattathreya Vemuru - Resume
           This repository contains my professional resume created with LaTeX.
           ## Current Resume
-          ![Resume](resume.pdf)
+          ![Resume](resume.png)
           ## How to Use
           1. Clone this repository
           2. Edit `resume.tex` file
           3. Compile with LaTeX or use Overleaf
-          *Last updated: $(date '+%Y-%m-%d %H:%M:%S')*
           EOL
           
       - name: Commit and push
